--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/indigo-white.css">
+	<link rel="stylesheet" href="css/indigo-white.css">
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Andrew!</div>
-		<div class="tagline">Full-Stack Web Dev | Javascript | Python</div>
+		<div class="tagline">Full-Stack Web Dev | Python | Javascript </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/knox-dude">
@@ -66,6 +66,7 @@
         <span class="sr-only">CodePen</span>
       </a>
     </div>
+    <div class="projects-container"></div>
 	</main>
 </body>
 </html>
