Added project cards to display my projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Andrew Knox | Awesome Dev</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -66,7 +66,26 @@
         <span class="sr-only">CodePen</span>
       </a>
     </div>
-    <div class="projects-container"></div>
+    <!-- everything after this was created by andrew knox with help from Chat GPT, github: knox-dud -->
+    <ol class="projects-container">
+      <li class="project-thumbnail-container">
+        <a href="https://knox-dude.github.io/hacker-news-clone-springboard/" target="_blank">
+          <div class="project-thumbnail">
+            <img src="project-photos/hacker-news-clone.PNG" alt="Image of hacker news clone website">
+            <h2>Hacker news clone</h2>
+            <p>A small website that interacts with a back-end to allow users to login, favorite, create, and delete stories</p>
+          </div>
+        </a>   
+      </li>
+
+      <li class="project-thumbnail-container">
+        <div class="project-thumbnail">
+          <img src="project2.jpg" alt="Project 2">
+          <p>A jeopardy clone that interacts with a backend to fill a jeopardy board with questions
+            - sorry, no link! This one was a private assignment, you'll have to ask me in person! </p>
+        </div>
+      </li>
+    </ol>
 	</main>
 </body>
 </html>
