adding photo for jeopardy project

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="https://knox-dude.github.io/hacker-news-clone-springboard/" target="_blank">
           <div class="project-thumbnail">
             <img src="project-photos/hacker-news-clone.PNG" alt="Image of hacker news clone website">
-            <h2>Hacker news clone</h2>
+            <h2>Hacker News Clone</h2>
             <p>A small website that interacts with a back-end to allow users to login, favorite, create, and delete stories</p>
           </div>
         </a>   
@@ -80,9 +80,10 @@
 
       <li class="project-thumbnail-container">
         <div class="project-thumbnail">
-          <img src="project2.jpg" alt="Project 2">
+          <img src="project-photos/jeopardy-game.PNG" alt="Image of Jeopardy game website">
+          <h2>Jeopardy Game</h2>
           <p>A jeopardy clone that interacts with a backend to fill a jeopardy board with questions
-            - sorry, no link! This one was a private assignment, you'll have to ask me in person! </p>
+            - sorry, no demo! This one was a private assignment - ask me IRL </p>
         </div>
       </li>
     </ol>
