--- a/my-app/index.html
+++ b/my-app/index.html
@@ -7,7 +7,7 @@
     <link href="./src/output.css" rel="stylesheet">
     <title>Andrew Knox</title>
   </head>
-  <body class="bg-slate-900">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
