changing icon and metadata

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="/favicon.ico" />
+    <link rel="icon" type="image/ico" href="/AndrewIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/output.css" rel="stylesheet">
-    <title>Andrew Knox</title>
+    <title>Andrew Knox Portfolio</title>
+    <meta property="og:title" content="Andrew Knox Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://knox-dude.github.io" />
+    <meta property="og:image" content="https://knox-dude.github.io/photos/andrew-photo.jpeg" />
+    <meta property="og:description" content="The developer portfolio for Andrew Knox, a fullstack web developer based in Seattle" />
+    <meta name="description" content="The developer portfolio for Andrew Knox, a fullstack web developer based in Seattle" />
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="andrewknox" />
+    <meta name="googlebot" content="index,follow"/>
   </head>
   <body>
     <div id="root"></div>
